relations overlap fix for #631 - patch from Antony Semonella
git-svn-id: https://svn.apache.org/repos/asf/bloodhound/trunk@1548821 13f79535-47bb-0310-9956-ffa450edef68

--- a/bloodhound_theme/bhtheme/htdocs/bloodhound.css
+++ b/bloodhound_theme/bhtheme/htdocs/bloodhound.css
@@ -1358,3 +1358,17 @@ input[type="radio"]:not(:checked) + label span {
  border-top: 1px solid #dddddd;
 }
 
+/* @group Related tickets */
+
+.relations table {
+ table-layout: fixed;
+ word-wrap: break-word;
+}
+
+.relations table .width-standard {
+ width: 17%;
+}
+.relations table .width-wide {
+ width: 32%;
+}
+/* @end */
